--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Crystals Collector!</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <link rel="stylesheet" href="reset.css">
     </head>
 
@@ -41,19 +41,16 @@
     <img height="200px" id="purplegem" src="https://img1.picmix.com/output/stamp/normal/4/7/7/0/290774_01491.gif">
     <img height="200px" id="bluegem" src="https://cdnb.artstation.com/p/assets/images/images/009/406/821/original/anna-mellor-meecham-bluegem-final.gif?1518802668">
 
-   <p><h3>Your total score is: <span id="yourScore"></span></h3></p>
+    <p><h3>Your total score is: <span id="yourScore"></span></h3></p>
     
     <div id="blue"><p><h1><span id="totalScore"></span></h1></p></div>
 
-    </div>
+</div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <script type="text/javascript" href="/javascript/game.js">
- 
-
-    	 </script>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 
 
 </body>
