--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html>
     <head>
         <title>Crystals Collector!</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css"> <!-- this links to unit-4-game/assets/css/style.css -->
         <link rel="stylesheet" href="reset.css">
     </head>
 
 <body>
-    <div id="container">
+
+    <div id="container"> 
 	
     <h1>CrystalsCollector!</h1>
 
-
-    <!-- <p>You guessed: <span id="yourGuess"></span></p> -->
+    <!-- <p><span id="output"></span></p> -->
     <p>You will be given a random number at the start of the game.</p>
     <p>There are four crystals below. By clicking on a crystal you
         will add a specific amount of points to your total score.</p>
     <p>You win the game by matching your total score to the random number,
-        you lose the game if your total score goes above the random
-        number.</p>
+        you lose the game if your total score goes above the random number.</p>
     <p>The value of each crystal is hidden from you until you click on it.</p>
     <p>Each time when the game starts, the game will change the values
     of each crystal.</p>
@@ -31,15 +30,17 @@
     <p><h4>Wins: <span id="wins"></span></h4></p> 
     <p><h4>Losses: <span id="losses"></span></h4></p>
     </div>
+
     <p id="stopFloat"></p>
+
     <!-- image of colored gems that Player clicks on -->
     <img height="200px" id="redgem" src="http://i.imgur.com/6ipUqve.gif">    
     <img height="200px" id="yellowgem" src="http://www.clrlworld.com/lapidary/Images/3wisemen.gif">
-    <img height="200px" id="cleargem" src="https://i.gifer.com/R6oX.gif">
+    <!-- <img height="200px" id="cleargem" src="https://i.gifer.com/R6oX.gif"> -->
     <img height="180px" id="greengem" src="https://i.gifer.com/7XPV.gif">
-    <img height="200px" id="dullpurplegem" src="https://media.giphy.com/media/ruViu7ULlBgVG/giphy.gif">
+    <!-- <img height="200px" id="dullpurplegem" src="https://media.giphy.com/media/ruViu7ULlBgVG/giphy.gif"> -->
     <img height="200px" id="purplegem" src="https://img1.picmix.com/output/stamp/normal/4/7/7/0/290774_01491.gif">
-    <img height="200px" id="bluegem" src="https://cdnb.artstation.com/p/assets/images/images/009/406/821/original/anna-mellor-meecham-bluegem-final.gif?1518802668">
+    <!-- <img height="200px" id="bluegem" src="https://cdnb.artstation.com/p/assets/images/images/009/406/821/original/anna-mellor-meecham-bluegem-final.gif?1518802668"> -->
 
     <p><h3>Your total score is: <span id="yourScore"></span></h3></p>
     
@@ -50,7 +51,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <script type="text/javascript" src="assets/javascript/game.js"></script>
+    <script type="text/javascript" src="assets/javascript/game.js"></script> <!-- this links to unit-4-game/assets/javascript/game.js -->
 
 
 </body>
