--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Crystals Collector!</title>
+        <title id="title">Crystals Collector!</title>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css"> <!-- this links to unit-4-game/assets/css/style.css -->
         <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
     </head>
