changed font-updated footer

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
         <title id="title">Crystals Collector!</title>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css"> <!-- this links to unit-4-game/assets/css/style.css -->
         <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
+        <!-- <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet"> -->
+        <link href="https://fonts.googleapis.com/css?family=Kalam:700" rel="stylesheet">
     </head>
 
 <body background="assets/css/backgroundgem.jpg">
 
     <div id="container"> 
 	
-    <h1 id="title">CrystalsCollector!</h1>
+    <h1 id="title">Crystals-Collector!</h1>
 
     <!-- <p><span id="output"></span></p> -->
     <p>You will be given a random number at the start of the game.</p>
@@ -47,7 +49,7 @@
     
     <div id="blue"><h1><span id="totalScore"></span></h1></div>
     <br />
-    <footer>&copy GemCollector by Stephanie</footer>
+    <footer>&copy GemCollector by Stephanie Imperial</footer>
 </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
